# backer

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  backer-list.rs
src/backer/: CMakeLists.txt  main.cpp
src/backer-gtk/: CMakeLists.txt  main.cpp
src/libbacker/: CMakeLists.txt  backer.cpp  backer.h  base-group-set.cpp  base-group-set.h  dir-group-set.cpp  dir-group-set.h  file-data.h  file-group-set.cpp  file-group-set.h  file-index-database.cpp  file-index-database.h  file-tree.cpp  file-tree.h
tests/test-sets/dest/: diff2  diff3
tests/test-sets/src/: diff5
tests/unit-tests/: CMakeLists.txt  backer-tests.cpp
